feat: add websocket api for retrieving logs
